--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -18,6 +18,11 @@ $dark-gray: #2F4858;  // Default gray color
 $gray: #f3f3f4;       // Background wrapper color
 $light-gray: #D1DADE;  
 
+//Notifications colors
+$warning: red;
+$success: green;
+
+
 // New Nav Colors
 $nav_blue: #6CB7E5;
 $nav_green_1: #B1E9A8;
