--- a/sass/style.scss
+++ b/sass/style.scss
@@ -49,6 +49,8 @@ Theme Name: World Bank - IFC - iPortal
 @import "chat";
 @import "metismenu";
 @import "progress-wizard";
+@import "masonry-grid";
+@import "utilities";
 
 // Custom CSS for regular CSS
 @import "tmp";
