--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -4,24 +4,31 @@ body {
   color: $text-color;
   overflow-x: hidden;
 }
-
 html, body {
   height: 100%;
-
 }
-
 body.full-height-layout #wrapper,
 body.full-height-layout #page-wrapper {
   height: 100%;
 }
-
+//
 #page-wrapper {
   min-height: auto;
 }
-
+.pageWrap{
+    position: relative;
+    z-index: 20;
+}
+.pageWrapper{
+    position: relative;
+    z-index: 20;
+    @include displayFlex;
+    min-height: 100vh;
+    padding-top: $top-bar-height;
+}
+//
 body.boxed-layout {
 }
-
 body.boxed-layout #wrapper {
   background-color: #2f4050;
   max-width: $boxed-width;
@@ -30,7 +37,6 @@ body.boxed-layout #wrapper {
   -moz-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.75);
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.75);
 }
-
 .top-navigation.boxed-layout #wrapper,
 .boxed-layout #wrapper.top-navigation {
   max-width: 1300px !important;
@@ -97,41 +103,6 @@ video {
   width: 100% !important;
   height: auto !important;
 }
-
-/* GALLERY */
-.gallery > .row > div {
-  margin-bottom: 15px;
-}
-
-.fancybox img {
-  margin-bottom: 5px;
-  /* Only for demo */
-  width: 24%;
-}
-
-/* Summernote text editor  */
-.note-editor {
-  height: auto !important;
-}
-
-.note-editor.fullscreen {
-  z-index: 2050;
-}
-.note-editor.note-frame.fullscreen { z-index: 2020; }
-
-.note-editor.note-frame .note-editing-area .note-editable {
-  color: $text-color;
-  padding: 15px;
-}
-
-.note-editor.note-frame {
-  border: none;
-}
-
-.note-editor.panel {
-  margin-bottom: 0;
-}
-
 /* MODAL */
 .modal-content {
   background-clip: padding-box;
@@ -229,59 +200,7 @@ ul.unstyled, ol.unstyled {
   color: #e5e6e7;
 }
 
-/* FOOTER */
 
-.footer {
-
-  background: none repeat scroll 0 0 white;
-  border-top: 1px solid $border-color;
-  bottom: 0;
-  left: 0;
-  padding: 10px 20px;
-  position: absolute;
-  right: 0;
-}
-
-.footer.fixed_full {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 1000;
-  padding: 10px 20px;
-  background: white;
-  border-top: 1px solid $border-color;
-}
-
-.footer.fixed {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 1000;
-  padding: 10px 20px;
-  background: white;
-  border-top: 1px solid $border-color;
-  margin-left: $sidebar-width;
-}
-
-body.mini-navbar .footer.fixed,
-body.body-small.mini-navbar .footer.fixed {
-  margin: 0 0 0 70px;
-}
-
-body.mini-navbar.canvas-menu .footer.fixed,
-body.canvas-menu .footer.fixed {
-  margin: 0 !important;
-}
-
-body.fixed-sidebar.body-small.mini-navbar .footer.fixed {
-  margin: 0 0 0 $sidebar-width;
-}
-
-body.body-small .footer.fixed {
-  margin-left: 0;
-}
 
 /* PANELS */
 
@@ -650,776 +569,7 @@ table.table-mail tr td {
   right: 0;
 }
 
-/* BACKGROUNDS */
 
-
-.gray-bg, .bg-muted {
-  background-color: $gray;
-}
-
-.white-bg {
-  background-color: #ffffff;
-}
-
-.blue-bg, .bg-success {
-  background-color: $blue;
-  color: #ffffff;
-}
-
-.navy-bg, .bg-primary {
-  background-color: $navy;
-  color: #ffffff;
-}
-
-.lazur-bg, .bg-info {
-  background-color: $lazur;
-  color: #ffffff;
-}
-
-.yellow-bg, .bg-warning {
-  background-color: $yellow;
-  color: #ffffff;
-}
-
-.red-bg, .bg-danger {
-  background-color: $red;
-  color: #ffffff;
-}
-
-.black-bg {
-  background-color: #262626;
-}
-
-.panel-primary {
-  border-color: $navy;
-}
-
-.panel-primary > .panel-heading {
-  background-color: $navy;
-  border-color: $navy;
-}
-
-.panel-success {
-  border-color: $blue;
-}
-
-.panel-success > .panel-heading {
-  background-color: $blue;
-  border-color: $blue;
-  color: #ffffff;
-}
-
-.panel-info {
-  border-color: $lazur;
-}
-
-.panel-info > .panel-heading {
-  background-color: $lazur;
-  border-color: $lazur;
-  color: #ffffff;
-}
-
-.panel-warning {
-  border-color: $yellow;
-}
-
-.panel-warning > .panel-heading {
-  background-color: $yellow;
-  border-color: $yellow;
-  color: #ffffff;
-}
-
-.panel-danger {
-  border-color: $red;
-}
-
-.panel-danger > .panel-heading {
-  background-color: $red;
-  border-color: $red;
-  color: #ffffff;
-}
-
-.progress-bar {
-  background-color: $navy;
-}
-
-.progress-small, .progress-small .progress-bar {
-  height: 10px;
-}
-
-.progress-small, .progress-mini {
-  margin-top: 5px;
-}
-
-.progress-mini, .progress-mini .progress-bar {
-  height: 5px;
-  margin-bottom: 0;
-}
-
-.progress-bar-navy-light {
-  background-color: #3dc7ab;
-}
-
-.progress-bar-success {
-  background-color: $blue;
-}
-
-.progress-bar-info {
-  background-color: $lazur;
-}
-
-.progress-bar-warning {
-  background-color: $yellow;
-}
-
-.progress-bar-danger {
-  background-color: $red;
-}
-
-.panel-title {
-  font-size: inherit;
-}
-
-.jumbotron {
-  border-radius: 6px;
-  padding: 40px;
-}
-
-.jumbotron h1 {
-  margin-top: 0;
-}
-
-/* COLORS */
-
-.text-navy {
-  color: $navy;
-}
-
-.text-primary {
-  color: inherit;
-}
-
-.text-success {
-  color: $blue;
-}
-
-.text-info {
-  color: $lazur;
-}
-
-.text-warning {
-  color: $yellow;
-}
-
-.text-danger {
-  color: $red;
-}
-
-.text-muted {
-  color: #888888;
-}
-
-.text-white {
-  color: #ffffff;
-}
-
-.simple_tag {
-  background-color: #f3f3f4;
-  border: 1px solid #e7eaec;
-  border-radius: 2px;
-  color: inherit;
-  font-size: 10px;
-  margin-right: 5px;
-  margin-top: 5px;
-  padding: 5px 12px;
-  display: inline-block;
-}
-
-.img-shadow {
-  -webkit-box-shadow: 0 0 3px 0 rgba(145, 145, 145, 1);
-  -moz-box-shadow: 0 0 3px 0 rgba(145, 145, 145, 1);
-  box-shadow: 0 0 3px 0 rgba(145, 145, 145, 1);
-}
-
-/* For handle diferent bg color in AngularJS version */
-.dashboards\.dashboard_2 nav.navbar,
-.dashboards\.dashboard_3 nav.navbar,
-.mailbox\.inbox nav.navbar,
-.mailbox\.email_view nav.navbar,
-.mailbox\.email_compose nav.navbar,
-.dashboards\.dashboard_4_1 nav.navbar,
-.metrics nav.navbar, .metrics\.index nav.navbar,
-.dashboards\.dashboard_5 nav.navbar {
-  background: #fff;
-}
-
-/* For handle diferent bg color in MVC version */
-.Dashboard_2 .navbar.navbar-static-top,
-.Dashboard_3 .navbar.navbar-static-top,
-.Dashboard_4_1 .navbar.navbar-static-top,
-.ComposeEmail .navbar.navbar-static-top,
-.EmailView .navbar.navbar-static-top,
-.Inbox .navbar.navbar-static-top,
-.Metrics .navbar.navbar-static-top,
-.Dashboard_5 .navbar.navbar-static-top {
-  background: #fff;
-}
-
-a.close-canvas-menu {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  z-index: 1011;
-  color: #a7b1c2;
-}
-
-a.close-canvas-menu:hover {
-  color: #fff;
-}
-
-.close-canvas-menu {
-  display: none;
-}
-
-.canvas-menu .close-canvas-menu {
-  display: block
-}
-
-.light-navbar .navbar.navbar-static-top {
-  background-color: #fff
-}
-
-/* FULL HEIGHT */
-
-.full-height {
-  height: 100%;
-}
-
-.fh-breadcrumb {
-  height: calc(100% - 196px);
-  margin: 0 -15px;
-  position: relative
-}
-
-.fh-no-breadcrumb {
-  height: calc(100% - 99px);
-  margin: 0 -15px;
-  position: relative
-}
-
-.fh-column {
-  background: #fff;
-  height: 100%;
-  width: 240px;
-  float: left
-}
-
-.modal-backdrop {
-  z-index: 2040 !important;
-}
-
-.modal {
-  z-index:30050 !important;
-}
-
-.spiner-example {
-  height: 200px;
-  padding-top: 70px;
-}
-
-/* MARGINS & PADDINGS */
-
-.p-xxs {
-  padding: 5px;
-}
-
-.p-xs {
-  padding: 10px;
-}
-
-.p-sm {
-  padding: 15px;
-}
-
-.p-m {
-  padding: 20px;
-}
-
-.p-md {
-  padding: 25px;
-}
-
-.p-lg {
-  padding: 30px;
-}
-
-.p-xl {
-  padding: 40px;
-}
-
-.p-w-xs {
-  padding: 0 10px;
-}
-
-.p-w-sm {
-  padding: 0 15px;
-
-}
-
-.p-w-m {
-  padding: 0 20px;
-
-}
-
-.p-w-md {
-  padding: 0 25px;
-
-}
-
-.p-w-lg {
-  padding: 0 30px;
-
-}
-
-.p-w-xl {
-  padding: 0 40px;
-
-}
-.p-h-xs {
-  padding: 10px 0;
-}
-
-.p-h-sm {
-  padding: 15px 0;
-
-}
-
-.p-h-m {
-  padding: 20px 0;
-
-}
-
-.p-h-md {
-  padding: 25px 0;
-
-}
-
-.p-h-lg {
-  padding: 30px 0;
-
-}
-
-.p-h-xl {
-  padding: 40px 0;
-
-}
-
-
-.m-xxs {
-  margin: 2px 4px;
-}
-
-.m {
-  margin: 15px;
-}
-
-.m-xs {
-  margin: 5px;
-}
-
-.m-sm {
-  margin: 10px;
-}
-
-.m {
-  margin: 15px;
-}
-
-.m-md {
-  margin: 20px;
-}
-
-.m-lg {
-  margin: 30px;
-}
-
-.m-xl {
-  margin: 50px;
-}
-
-.m-n {
-  margin: 0 !important;
-}
-
-.m-l-none {
-  margin-left: 0;
-}
-
-.m-l-xs {
-  margin-left: 5px;
-}
-
-.m-l-sm {
-  margin-left: 10px;
-}
-
-.m-l {
-  margin-left: 15px;
-}
-
-.m-l-md {
-  margin-left: 20px;
-}
-
-.m-l-lg {
-  margin-left: 30px;
-}
-
-.m-l-xl {
-  margin-left: 40px;
-}
-
-.m-l-n-xxs {
-  margin-left: -1px;
-}
-
-.m-l-n-xs {
-  margin-left: -5px;
-}
-
-.m-l-n-sm {
-  margin-left: -10px;
-}
-
-.m-l-n {
-  margin-left: -15px;
-}
-
-.m-l-n-md {
-  margin-left: -20px;
-}
-
-.m-l-n-lg {
-  margin-left: -30px;
-}
-
-.m-l-n-xl {
-  margin-left: -40px;
-}
-
-.m-t-none {
-  margin-top: 0;
-}
-
-.m-t-xxs {
-  margin-top: 1px;
-}
-
-.m-t-xs {
-  margin-top: 5px;
-}
-
-.m-t-sm {
-  margin-top: 10px;
-}
-
-.m-t {
-  margin-top: 15px;
-}
-
-.m-t-md {
-  margin-top: 20px;
-}
-
-.m-t-lg {
-  margin-top: 30px;
-}
-
-.m-t-xl {
-  margin-top: 40px;
-}
-
-.m-t-n-xxs {
-  margin-top: -1px;
-}
-
-.m-t-n-xs {
-  margin-top: -5px;
-}
-
-.m-t-n-sm {
-  margin-top: -10px;
-}
-
-.m-t-n {
-  margin-top: -15px;
-}
-
-.m-t-n-md {
-  margin-top: -20px;
-}
-
-.m-t-n-lg {
-  margin-top: -30px;
-}
-
-.m-t-n-xl {
-  margin-top: -40px;
-}
-
-.m-r-none {
-  margin-right: 0;
-}
-
-.m-r-xxs {
-  margin-right: 1px;
-}
-
-.m-r-xs {
-  margin-right: 5px;
-}
-
-.m-r-sm {
-  margin-right: 10px;
-}
-
-.m-r {
-  margin-right: 15px;
-}
-
-.m-r-md {
-  margin-right: 20px;
-}
-
-.m-r-lg {
-  margin-right: 30px;
-}
-
-.m-r-xl {
-  margin-right: 40px;
-}
-
-.m-r-n-xxs {
-  margin-right: -1px;
-}
-
-.m-r-n-xs {
-  margin-right: -5px;
-}
-
-.m-r-n-sm {
-  margin-right: -10px;
-}
-
-.m-r-n {
-  margin-right: -15px;
-}
-
-.m-r-n-md {
-  margin-right: -20px;
-}
-
-.m-r-n-lg {
-  margin-right: -30px;
-}
-
-.m-r-n-xl {
-  margin-right: -40px;
-}
-
-.m-b-none {
-  margin-bottom: 0;
-}
-
-.m-b-xxs {
-  margin-bottom: 1px;
-}
-
-.m-b-xs {
-  margin-bottom: 5px;
-}
-
-.m-b-sm {
-  margin-bottom: 10px;
-}
-
-.m-b {
-  margin-bottom: 15px;
-}
-
-.m-b-md {
-  margin-bottom: 20px;
-}
-
-.m-b-lg {
-  margin-bottom: 30px;
-}
-
-.m-b-xl {
-  margin-bottom: 40px;
-}
-
-.m-b-n-xxs {
-  margin-bottom: -1px;
-}
-
-.m-b-n-xs {
-  margin-bottom: -5px;
-}
-
-.m-b-n-sm {
-  margin-bottom: -10px;
-}
-
-.m-b-n {
-  margin-bottom: -15px;
-}
-
-.m-b-n-md {
-  margin-bottom: -20px;
-}
-
-.m-b-n-lg {
-  margin-bottom: -30px;
-}
-
-.m-b-n-xl {
-  margin-bottom: -40px;
-}
-
-.space-15 {
-  margin: 15px 0;
-}
-
-.space-20 {
-  margin: 20px 0;
-}
-
-.space-25 {
-  margin: 25px 0;
-}
-
-.space-30 {
-  margin: 30px 0;
-}
-
-
-// IMAGES SIZE
-
-.img-sm {
-  width: 32px;
-  height: 32px;
-}
-
-.img-md {
-  width: 64px;
-  height: 64px;
-}
-
-.img-lg {
-  width: 96px;
-  height: 96px;
-}
-
-// BORDER RADIUS
-
-.b-r-xs {
-  -webkit-border-radius: 1px;
-  -moz-border-radius: 1px;
-  border-radius: 1px;
-}
-
-.b-r-sm {
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-}
-
-.b-r-md {
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  border-radius: 6px;
-}
-
-.b-r-lg {
-  -webkit-border-radius: 12px;
-  -moz-border-radius: 12px;
-  border-radius: 12px;
-}
-
-.b-r-xl {
-  -webkit-border-radius: 24px;
-  -moz-border-radius: 24px;
-  border-radius: 24px;
-}
-
-// Fullscreen functions
-
-.fullscreen-ibox-mode .animated {
-  animation: none;
-}
-
-body.fullscreen-ibox-mode {
-  overflow-y: hidden;
-}
-
-.ibox.fullscreen {
-  z-index: 2030;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  overflow: auto;
-  margin-bottom: 0;
-}
-
-.ibox.fullscreen .collapse-link {
-  display: none;
-}
-
-.ibox.fullscreen .ibox-content {
-  min-height: calc(100% - 48px);
-}
-
-// Bootstrap issue in 3.3.0 with modal https://github.com/twbs/bootstrap/issues/9855
-// Fix
-body.modal-open {
-  padding-right: inherit !important;
-}
-
-
-// Fix modal in Safari browser
-body.modal-open .wrapper-content.animated {
-  -webkit-animation: none;
-  -ms-animation-nam: none;
-  animation: none;
-}
-
-// Fix for modal backdrop with animate.css
-body.modal-open .animated {
-  animation-fill-mode: initial;
-  z-index: inherit
-}
-
-/* Show profile dropdown on fixed sidebar */
-body.mini-navbar.fixed-sidebar .profile-element, .block {
-  display: block !important;
-}
-
-body.mini-navbar.fixed-sidebar .nav-header {
-  padding: 33px 25px;
-}
-
-body.mini-navbar.fixed-sidebar .logo-element {
-  display: none;
-}
-
-// Remove animation on fullscreen video
-
-.fullscreen-video .animated {
-  animation: none;
-}
 
 // NC Icons
 .nc-icon-outline{
