--- a/css/style.css
+++ b/css/style.css
@@ -2818,26 +2818,30 @@ body.tour-open .animated {
   font-size: 16px;
   font-weight: 300; }
   .sidebar-body .sidebar-notification {
+    border-bottom: 1px solid #d1caca;
     padding: 30px 20px;
     color: #394046; }
     .sidebar-body .sidebar-notification .nTitle {
-      font-weight: 500; }
+      font-weight: 500;
+      text-transform: uppercase; }
     .sidebar-body .sidebar-notification .nDate {
       color: #777777; }
-    .sidebar-body .sidebar-notification .notification-content {
-      border-bottom: 1px solid #394046;
-      padding-bottom: 20px; }
-      .sidebar-body .sidebar-notification .notification-content p {
-        margin: 0;
-        padding: 0; }
-        .sidebar-body .sidebar-notification .notification-content p.buttons {
-          margin-top: 10px; }
+    .sidebar-body .sidebar-notification .nLabel {
+      font-size: 85%;
+      display: inline-block;
+      margin-right: 5px;
+      font-weight: 500;
+      color: #bbb; }
+    .sidebar-body .sidebar-notification .notification-content p {
+      margin: 0;
+      padding: 0; }
+      .sidebar-body .sidebar-notification .notification-content p.buttons {
+        margin-top: 10px; }
   .sidebar-body a {
     font-weight: 500; }
 
 .sidebar-notification.notification-urgent {
-  background: #F2F2F2;
-  margin-bottom: 3px; }
+  background: #F2F2F2; }
   .sidebar-notification.notification-urgent .notification-content {
     border: none;
     padding-bottom: 0; }
@@ -2874,8 +2878,10 @@ body.tour-open .animated {
   top: 0;
   width: 100%; }
 
-.ifc-tabs .nav-tabs {
-  border-bottom: none; }
+.ifc-tabs {
+  margin-bottom: -1px; }
+  .ifc-tabs .nav-tabs {
+    border-bottom: none; }
 
 .ifc-tabs .nav-tabs > li.active > a,
 .ifc-tabs .nav-tabs > li.active > a:focus,
