--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -44,20 +44,29 @@
 
 }
 .sidebar-body{
-  font-size:16px;
-  font-weight:300;
+  font-size: 16px;
+  font-weight: 300;
   .sidebar-notification{
+    border-bottom: 1px solid #d1caca;
     padding: 30px 20px;
     color: $sidebar_blue;
     .nTitle{
       font-weight:500;
+      text-transform: uppercase;
     }
     .nDate{
       color: #777777;
     }
+    .nLabel{
+      font-size: 85%;
+      display: inline-block;
+      margin-right: 5px;
+      font-weight: 500;
+      color: #bbb;
+    }
     .notification-content{
-      border-bottom:1px solid $sidebar_blue;
-      padding-bottom:20px;
+      //border-bottom:1px solid $sidebar_blue;
+      //padding-bottom:20px;
       p{
         margin: 0;
         padding: 0;
@@ -73,7 +82,6 @@
 }
 .sidebar-notification.notification-urgent{
   background:#F2F2F2;
-  margin-bottom:3px;
   .notification-content{
     border:none;
     padding-bottom:0;
@@ -119,6 +127,7 @@
   width: 100%;
 }
 .ifc-tabs{
+  margin-bottom: -1px;
   .nav-tabs{
     border-bottom: none;
   }
