--- a/css/style.css
+++ b/css/style.css
@@ -121,8 +121,8 @@ h3, h4, h5 {
 
 /* navbar form */
 .navbar-form-custom {
-  padding: 0;
-  width: 200px;
+  padding: -5px;
+  width: 250px;
   display: block;
   color: #fff !important; }
 
@@ -133,7 +133,7 @@ h3, h4, h5 {
   background: none repeat scroll 0 0 transparent;
   border: medium none;
   font-size: 14px;
-  height: 60px;
+  height: 26px;
   margin: 0;
   z-index: 2000; }
 
@@ -4625,5 +4625,13 @@ li.my-account {
   position: fixed;
   top: 0;
   width: 100%; }
+
+.search-bar {
+  background: white !important;
+  border: medium none;
+  font-size: 14px;
+  height: 28px !important;
+  margin: 0;
+  z-index: 2000; }
 
 /*# sourceMappingURL=style.css.map */
