--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -44,8 +44,8 @@
 }
 /* navbar form */
 .navbar-form-custom {
-  padding: 0;
-  width: 200px;
+  padding: -5px;
+  width: 250px;
   display: block;
   color:#fff !important;
 }
@@ -56,7 +56,7 @@
   background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
   border: medium none;
   font-size: 14px;
-  height: 60px;
+  height: 26px;
   margin: 0;
   z-index: 2000;
 }
